# 09_Baustatik_GGW

./: README.md  Zerlegen_einer_Kraft.py  pyproject.toml  token
src/: Examples.ipynb  Zerlegen_einer_Kraft.py  actions.py  actions_on_structures.py  equilibrium.py  main.ipynb  main.py  reactions.py  structure.py  test_equilibrium.py  test_gleichgewicht.py
src/equilibrium/: Zerlegen_einer_Kraft.py  __init__.py  actions.py  reactions.py  structure.py
src/equilibrium.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/gleichgewicht/: Zerlegen_einer_Kraft.py  __init__.py  structure.py
src/gleichgewicht.egg-info/: PKG-INFO
src/simple_equilibrium/: main.ipynb  main.py
tests/: test_forces.py
